Fix notification spacing.

--- a/app/assets/stylesheets/parts/_notification.scss
+++ b/app/assets/stylesheets/parts/_notification.scss
@@ -1,3 +1,7 @@
 .notification {
-  margin-top: 10px;
+  background-color: #000;
+
+  .alert {
+    margin-top: 15px;
+  }
 }
